.helm/templates/chatgptdb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ./.helm/templates
    kompose.controller.type: statefulset
    kompose.service.type: clusterip
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: chatgptdb
  name: chatgptdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chatgptdb
  serviceName: chatgptdb
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/chatgpt-ui-network: "true"
        io.kompose.service: chatgptdb
    spec:
      containers:
        - env:
            - name: POSTGRES_DB_FILE
              value: /run/secrets/chatgpt-db/chatgpt-db
            - name: POSTGRES_PASSWORD_FILE
              value: /run/secrets/chatgpt-db-pass/chatgpt-db-pass
            - name: POSTGRES_USER_FILE
              value: /run/secrets/chatgpt-db-user/chatgpt-db-user
          image: postgres:12.9
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -h 127.0.0.1
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          name: chatgptdb
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets/chatgpt-db
              name: chatgpt-db
            - mountPath: /run/secrets/chatgpt-db-user
              name: chatgpt-db-user
            - mountPath: /run/secrets/chatgpt-db-pass
              name: chatgpt-db-pass
            - mountPath: /var/lib/postgresql/data
              name: chatgptdb
      restartPolicy: Always
      volumes:
        - name: chatgpt-db
          secret:
            items:
              - key: chatgpt-db
                path: chatgpt-db
            secretName: chatgpt-db
        - name: chatgpt-db-user
          secret:
            items:
              - key: chatgpt-db-user
                path: chatgpt-db-user
            secretName: chatgpt-db-user
        - name: chatgpt-db-pass
          secret:
            items:
              - key: chatgpt-db-pass
                path: chatgpt-db-pass
            secretName: chatgpt-db-pass
        - name: chatgptdb
          persistentVolumeClaim:
            claimName: chatgptdb
  updateStrategy: {}
  volumeClaimTemplates:
    - metadata:
        creationTimestamp: null
        labels:
          io.kompose.service: chatgptdb
        name: chatgptdb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
      status: {}
status:
  replicas: 0
