.helm/templates/chatgpt-ui-wsgi-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ./.helm/templates
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: chatgpt-ui-wsgi-server
  name: chatgpt-ui-wsgi-server
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8000
  selector:
    io.kompose.service: chatgpt-ui-wsgi-server
status:
  loadBalancer: {}
