.helm/templates/chatgptdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ./.helm/templates
    kompose.controller.type: statefulset
    kompose.service.type: clusterip
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: chatgptdb
  name: chatgptdb
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: chatgptdb
  type: ClusterIP
status:
  loadBalancer: {}
